--- a/src/zabbix/docker/docker-compose_v3_ubuntu_pgsql_latest.yaml
+++ b/src/zabbix/docker/docker-compose_v3_ubuntu_pgsql_latest.yaml
@@ -112,41 +112,41 @@ services:
    com.zabbix.dbtype: "pgsql"
    com.zabbix.os: "ubuntu"
 
- zabbix-agent:
-  image: zabbix/zabbix-agent:ubuntu-6.4-latest
-  ports:
-   - "10050:10050"
-  volumes:
-   - /etc/localtime:/etc/localtime:ro
-   - ./zbx_env/etc/zabbix/zabbix_agentd.d:/etc/zabbix/zabbix_agentd.d:ro
-   - ./zbx_env/var/lib/zabbix/modules:/var/lib/zabbix/modules:ro
-   - ./zbx_env/var/lib/zabbix/enc:/var/lib/zabbix/enc:ro
-   - ./zbx_env/var/lib/zabbix/ssh_keys:/var/lib/zabbix/ssh_keys:ro
-  deploy:
-   resources:
-    limits:
-      cpus: '0.5'
-      memory: 128M
-    reservations:
-      cpus: '0.5'
-      memory: 128M
-   mode: global
-  env_file:
-   - ./env_vars/.env_agent
-  privileged: true
-  pid: "host"
-  networks:
-   zbx_net_backend:
-    aliases:
-     - zabbix-agent
-     - zabbix-agent-passive
-     - zabbix-agent-ubuntu
-  stop_grace_period: 5s
-  labels:
-   com.zabbix.description: "Zabbix agent"
-   com.zabbix.company: "Zabbix LLC"
-   com.zabbix.component: "zabbix-agentd"
-   com.zabbix.os: "ubuntu"
+#  zabbix-agent:
+#   image: zabbix/zabbix-agent:ubuntu-6.4-latest
+#   ports:
+#    - "10050:10050"
+#   volumes:
+#    - /etc/localtime:/etc/localtime:ro
+#    - ./zbx_env/etc/zabbix/zabbix_agentd.d:/etc/zabbix/zabbix_agentd.d:ro
+#    - ./zbx_env/var/lib/zabbix/modules:/var/lib/zabbix/modules:ro
+#    - ./zbx_env/var/lib/zabbix/enc:/var/lib/zabbix/enc:ro
+#    - ./zbx_env/var/lib/zabbix/ssh_keys:/var/lib/zabbix/ssh_keys:ro
+#   deploy:
+#    resources:
+#     limits:
+#       cpus: '0.5'
+#       memory: 128M
+#     reservations:
+#       cpus: '0.5'
+#       memory: 128M
+#    mode: global
+#   env_file:
+#    - ./env_vars/.env_agent
+#   privileged: true
+#   pid: "host"
+#   networks:
+#    zbx_net_backend:
+#     aliases:
+#      - zabbix-agent
+#      - zabbix-agent-passive
+#      - zabbix-agent-ubuntu
+#   stop_grace_period: 5s
+#   labels:
+#    com.zabbix.description: "Zabbix agent"
+#    com.zabbix.company: "Zabbix LLC"
+#    com.zabbix.component: "zabbix-agentd"
+#    com.zabbix.os: "ubuntu"
 
 #  zabbix-java-gateway:
 #   image: zabbix/zabbix-java-gateway:ubuntu-6.4-latest
@@ -174,31 +174,31 @@ services:
 #    com.zabbix.component: "java-gateway"
 #    com.zabbix.os: "ubuntu"
 
- zabbix-snmptraps:
-  image: zabbix/zabbix-snmptraps:ubuntu-6.4-latest
-  ports:
-   - "162:1162/udp"
-  volumes:
-   - snmptraps:/var/lib/zabbix/snmptraps:rw
-  deploy:
-   resources:
-    limits:
-      cpus: '0.5'
-      memory: 256M
-    reservations:
-      cpus: '0.5'
-      memory: 256M
-  networks:
-   zbx_net_frontend:
-    aliases:
-     - zabbix-snmptraps
-   zbx_net_backend:
-  stop_grace_period: 5s
-  labels:
-   com.zabbix.description: "Zabbix snmptraps"
-   com.zabbix.company: "Zabbix LLC"
-   com.zabbix.component: "snmptraps"
-   com.zabbix.os: "ubuntu"
+#  zabbix-snmptraps:
+#   image: zabbix/zabbix-snmptraps:ubuntu-6.4-latest
+#   ports:
+#    - "162:1162/udp"
+#   volumes:
+#    - snmptraps:/var/lib/zabbix/snmptraps:rw
+#   deploy:
+#    resources:
+#     limits:
+#       cpus: '0.5'
+#       memory: 256M
+#     reservations:
+#       cpus: '0.5'
+#       memory: 256M
+#   networks:
+#    zbx_net_frontend:
+#     aliases:
+#      - zabbix-snmptraps
+#    zbx_net_backend:
+#   stop_grace_period: 5s
+#   labels:
+#    com.zabbix.description: "Zabbix snmptraps"
+#    com.zabbix.company: "Zabbix LLC"
+#    com.zabbix.component: "snmptraps"
+#    com.zabbix.os: "ubuntu"
 
  zabbix-web-service:
   image: zabbix/zabbix-web-service:ubuntu-6.4-latest
