--- a/src/zabbix/docker/env_vars/.env_db_pgsql
+++ b/src/zabbix/docker/env_vars/.env_db_pgsql
@@ -3,7 +3,7 @@ DB_SERVER_HOST=cstar-d-weu-zabbix-pgflex.postgres.database.azure.com
 # DB_SERVER_PORT=5432
 # POSTGRES_USER=zabbix
 POSTGRES_USER_FILE=/run/secrets/POSTGRES_USER
-# POSTGRES_PASSWORD=zabbix
+# POSTGRES_PASSWORD=
 POSTGRES_PASSWORD_FILE=/run/secrets/POSTGRES_PASSWORD
 # POSTGRES_DB=zabbix
 POSTGRES_DB=zabbix
