added docker example

--- a/src/zabbix/docker/env_vars/.env_db_pgsql
+++ b/src/zabbix/docker/env_vars/.env_db_pgsql
@@ -1,4 +1,4 @@
-DB_SERVER_HOST=cstar-d-weu-zabbix-pgflex.postgres.database.azure.com
+DB_SERVER_HOST=
 # DB_SERVER_HOST=postgres-server
 # DB_SERVER_PORT=5432
 # POSTGRES_USER=zabbix
