--- a/.devops/core-deploy-pipelines.yml
+++ b/.devops/core-deploy-pipelines.yml
@@ -4,21 +4,21 @@ pr: none
 
 parameters:
   - name: 'DEV'
-    displayName: 'Plan on DEV environment'
+    displayName: 'Run on DEV environment'
     type: boolean
     default: True
     values:
       - False
       - True
   - name: 'UAT'
-    displayName: 'Plan on UAT environment'
+    displayName: 'Run on UAT environment'
     type: boolean
     default: True
     values:
       - False
       - True
   - name: 'PROD'
-    displayName: 'Plan on PROD environment'
+    displayName: 'Run on PROD environment'
     type: boolean
     default: True
     values:
@@ -27,55 +27,64 @@ parameters:
 
 variables:
   TIME_OUT: 10
+  # working dir
+  WORKING_DIR: 'src/core'
+  DOMAIN_NAME: core
+  poolNameDev: '$(TF_POOL_NAME_DEV)'
+  poolNameUat: '$(TF_POOL_NAME_UAT)'
+  poolNameProd: '$(TF_POOL_NAME_PROD)'
+  #PLAN
+  azureServiceConnectionPlanNameDev: '$(TF_AZURE_SERVICE_CONNECTION_PLAN_NAME_DEV)'
+  azureServiceConnectionPlanNameUat: '$(TF_AZURE_SERVICE_CONNECTION_PLAN_NAME_UAT)'
+  azureServiceConnectionPlanNameProd: '$(TF_AZURE_SERVICE_CONNECTION_PLAN_NAME_PROD)'
+  #APPLY
+  azureServiceConnectionApplyNameDev: '$(TF_AZURE_SERVICE_CONNECTION_APPLY_NAME_DEV)'
+  azureServiceConnectionApplyNameUat: '$(TF_AZURE_SERVICE_CONNECTION_APPLY_NAME_UAT)'
+  azureServiceConnectionApplyNameProd: '$(TF_AZURE_SERVICE_CONNECTION_APPLY_NAME_PROD)'
+  githubEndpointName: '$(TF_GITHUB_SERVICE_ENDPOINT_NAME)'
 
 pool:
-  vmImage: 'ubuntu-20.04'
+  vmImage: 'ubuntu-latest'
 
 resources:
   repositories:
     - repository: terraform
       type: github
       name: pagopa/azure-pipeline-templates
-      ref: refs/tags/v3.0.0
-      endpoint: 'io-azure-devops-github-ro'
+      ref: refs/tags/v5.2.1
+      endpoint: "${{var.githubEndpointName}}"
 
-lockBehavior: sequential
 stages:
+#DEV
   - ${{ if eq(parameters['DEV'], true) }}:
-    # DEV CORE
     - template: templates/terraform-plan-apply/template.yaml@terraform
       parameters:
-        DOMAIN_NAME: 'core'
-        AZURE_DEVOPS_POOL_AGENT_NAME: "pagopa-dev-linux-infra"
-        ENVIRONMENT: "dev"
+        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}_common"
         TF_ENVIRONMENT_FOLDER: "dev"
-        WORKINGDIR: 'src/core'
-        AZURE_SERVICE_CONNECTION_NAME: DEV-PAGOPA-SERVICE-CONN
-
-  #
-  # UAT
-  #
+        ENVIRONMENT: "DEV"
+        AZURE_DEVOPS_POOL_AGENT_NAME: "${{var.poolNameDev}}"
+        WORKINGDIR: ${{ variables.WORKING_DIR }}
+        AZURE_SERVICE_CONNECTION_PLAN_NAME: "${{var.azureServiceConnectionPlanNameDev}}"
+        AZURE_SERVICE_CONNECTION_APPLY_NAME: "${{var.azureServiceConnectionApplyNameDev}}"
+#UAT
   - ${{ if eq(parameters['UAT'], true) }}:
-    # UAT CORE
     - template: templates/terraform-plan-apply/template.yaml@terraform
       parameters:
-        DOMAIN_NAME: 'core'
-        AZURE_DEVOPS_POOL_AGENT_NAME: "pagopa-uat-linux-infra"
-        ENVIRONMENT: "uat"
+        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}_common"
         TF_ENVIRONMENT_FOLDER: "uat"
-        WORKINGDIR: 'src/core'
-        AZURE_SERVICE_CONNECTION_NAME: UAT-PAGOPA-SERVICE-CONN
-
-  #
-  # PROD
-  #
+        ENVIRONMENT: "UAT"
+        AZURE_DEVOPS_POOL_AGENT_NAME: "${{var.poolNameUat}}"
+        WORKINGDIR: ${{ variables.WORKING_DIR }}
+        AZURE_SERVICE_CONNECTION_PLAN_NAME: "${{var.azureServiceConnectionPlanNameUat}}"
+        AZURE_SERVICE_CONNECTION_APPLY_NAME: "${{var.azureServiceConnectionApplyNameUat}}"
+#PROD
   - ${{ if eq(parameters['PROD'], true) }}:
-    # PROD CORE
     - template: templates/terraform-plan-apply/template.yaml@terraform
       parameters:
-        DOMAIN_NAME: 'core'
-        AZURE_DEVOPS_POOL_AGENT_NAME: "pagopa-prod-linux-infra"
-        ENVIRONMENT: "prod"
+        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}_common"
         TF_ENVIRONMENT_FOLDER: "prod"
-        WORKINGDIR: 'src/core'
-        AZURE_SERVICE_CONNECTION_NAME: PROD-PAGOPA-SERVICE-CONN
+        ENVIRONMENT: "PROD"
+        AZURE_DEVOPS_POOL_AGENT_NAME: "${{var.poolNameProd}}"
+        WORKINGDIR: ${{ variables.WORKING_DIR }}
+        AZURE_SERVICE_CONNECTION_PLAN_NAME: "${{var.azureServiceConnectionPlanNameProd}}"
+        AZURE_SERVICE_CONNECTION_APPLY_NAME: "${{var.azureServiceConnectionApplyNameProd}}"
