--- a/.devops/core-code-review-pipelines.yml
+++ b/.devops/core-code-review-pipelines.yml
@@ -54,7 +54,7 @@ resources:
       type: github
       name: pagopa/azure-pipeline-templates
       ref: refs/tags/v5.2.1
-      endpoint: "${{var.githubEndpointName}}"
+      endpoint: "io-azure-devops-github-ro"
 
 stages:
   - stage: DEV
