--- a/.devops/core-deploy-pipelines.yml
+++ b/.devops/core-deploy-pipelines.yml
@@ -51,15 +51,15 @@ resources:
     - repository: terraform
       type: github
       name: pagopa/azure-pipeline-templates
-      ref: refs/heads/migration-azurecli-to-service-connection
-      endpoint: "io-azure-devops-github-ro"
+      ref: refs/tags/v5.2.1
+      endpoint: 'io-azure-devops-github-ro'
 
 stages:
 #DEV
   - ${{ if eq(parameters['DEV'], true) }}:
     - template: templates/terraform-plan-apply/template.yaml@terraform
       parameters:
-        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}_common"
+        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}"
         TF_ENVIRONMENT_FOLDER: "dev"
         ENVIRONMENT: "DEV"
         AZURE_DEVOPS_POOL_AGENT_NAME: "${{variables.poolNameDev}}"
@@ -70,7 +70,7 @@ stages:
   - ${{ if eq(parameters['UAT'], true) }}:
     - template: templates/terraform-plan-apply/template.yaml@terraform
       parameters:
-        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}_common"
+        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}"
         TF_ENVIRONMENT_FOLDER: "uat"
         ENVIRONMENT: "UAT"
         AZURE_DEVOPS_POOL_AGENT_NAME: "${{variables.poolNameUat}}"
@@ -81,7 +81,7 @@ stages:
   - ${{ if eq(parameters['PROD'], true) }}:
     - template: templates/terraform-plan-apply/template.yaml@terraform
       parameters:
-        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}_common"
+        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}"
         TF_ENVIRONMENT_FOLDER: "prod"
         ENVIRONMENT: "PROD"
         AZURE_DEVOPS_POOL_AGENT_NAME: "${{variables.poolNameProd}}"
