fix summarize template

--- a/.devops/next-core-code-review-pipelines.yml
+++ b/.devops/next-core-code-review-pipelines.yml
@@ -53,7 +53,7 @@ resources:
     - repository: terraform
       type: github
       name: pagopa/azure-pipeline-templates
-      ref: refs/heads/summarize-tar-gz
+      ref: refs/tags/v5.3.1
       endpoint: "io-azure-devops-github-ro"
 
 stages:
