--- a/.devops/next-core-deploy-pipelines.yml
+++ b/.devops/next-core-deploy-pipelines.yml
@@ -59,7 +59,7 @@ stages:
   - ${{ if eq(parameters['DEV'], true) }}:
     - template: templates/terraform-plan-apply/template.yaml@terraform
       parameters:
-        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}_common"
+        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}"
         TF_ENVIRONMENT_FOLDER: "dev"
         ENVIRONMENT: "DEV"
         AZURE_DEVOPS_POOL_AGENT_NAME: "${{variables.poolNameDev}}"
@@ -70,7 +70,7 @@ stages:
   - ${{ if eq(parameters['UAT'], true) }}:
     - template: templates/terraform-plan-apply/template.yaml@terraform
       parameters:
-        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}_common"
+        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}"
         TF_ENVIRONMENT_FOLDER: "uat"
         ENVIRONMENT: "UAT"
         AZURE_DEVOPS_POOL_AGENT_NAME: "${{variables.poolNameUat}}"
@@ -81,7 +81,7 @@ stages:
   - ${{ if eq(parameters['PROD'], true) }}:
     - template: templates/terraform-plan-apply/template.yaml@terraform
       parameters:
-        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}_common"
+        FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}"
         TF_ENVIRONMENT_FOLDER: "prod"
         ENVIRONMENT: "PROD"
         AZURE_DEVOPS_POOL_AGENT_NAME: "${{variables.poolNameProd}}"
