--- a/.devops/next-core-deploy-pipelines.yml
+++ b/.devops/next-core-deploy-pipelines.yml
@@ -28,7 +28,7 @@ parameters:
 variables:
   TIME_OUT: 10
   # working dir
-  WORKING_DIR: 'src/core'
+  WORKING_DIR: 'src/next-core'
   DOMAIN_NAME: core
   poolNameDev: '$(TF_POOL_NAME_DEV)'
   poolNameUat: '$(TF_POOL_NAME_UAT)'
