--- a/.devops/aks-platform-deploy-pipelines.yml
+++ b/.devops/aks-platform-deploy-pipelines.yml
@@ -60,7 +60,7 @@ stages:
     - template: templates/terraform-plan-apply/template.yaml@terraform
       parameters:
         FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}"
-        TF_ENVIRONMENT_FOLDER: "dev"
+        TF_ENVIRONMENT_FOLDER: "weu-dev"
         ENVIRONMENT: "DEV"
         AZURE_DEVOPS_POOL_AGENT_NAME: "${{variables.poolNameDev}}"
         WORKINGDIR: ${{ variables.WORKING_DIR }}
@@ -71,7 +71,7 @@ stages:
     - template: templates/terraform-plan-apply/template.yaml@terraform
       parameters:
         FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}"
-        TF_ENVIRONMENT_FOLDER: "uat"
+        TF_ENVIRONMENT_FOLDER: "weu-uat"
         ENVIRONMENT: "UAT"
         AZURE_DEVOPS_POOL_AGENT_NAME: "${{variables.poolNameUat}}"
         WORKINGDIR: ${{ variables.WORKING_DIR }}
@@ -82,7 +82,7 @@ stages:
     - template: templates/terraform-plan-apply/template.yaml@terraform
       parameters:
         FULL_DOMAIN_NAME: "${{variables.DOMAIN_NAME}}"
-        TF_ENVIRONMENT_FOLDER: "prod"
+        TF_ENVIRONMENT_FOLDER: "weu-prod"
         ENVIRONMENT: "PROD"
         AZURE_DEVOPS_POOL_AGENT_NAME: "${{variables.poolNameProd}}"
         WORKINGDIR: ${{ variables.WORKING_DIR }}
