--- a/.devops/next-core-code-review-pipelines.yml
+++ b/.devops/next-core-code-review-pipelines.yml
@@ -5,7 +5,7 @@ pr:
       - main
   paths:
     include:
-      - 'src/wallet'
+      - 'src/next-core'
     exclude:
       - '**/*.lock.hcl'
       - '**/*.md'
@@ -36,7 +36,7 @@ parameters:
 variables:
   TIME_OUT: 15
   # working dir
-  WORKING_DIR: 'src/wallet'
+  WORKING_DIR: 'src/next-core'
   poolNameDev: '$(TF_POOL_NAME_DEV)'
   poolNameUat: '$(TF_POOL_NAME_UAT)'
   poolNameProd: '$(TF_POOL_NAME_PROD)'
@@ -53,7 +53,7 @@ resources:
     - repository: terraform
       type: github
       name: pagopa/azure-pipeline-templates
-      ref: refs/heads/migration-azurecli-to-service-connection
+      ref: refs/tags/v6.0.0
       endpoint: "io-azure-devops-github-ro"
 
 stages:
@@ -71,6 +71,7 @@ stages:
           - checkout: self
           # 1. Install terraform
           - template: templates/terraform-setup/template.yaml@terraform
+          - template: templates/terraform-summarize/template.yaml@terraform
           # 2. Run terraform plan core
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
@@ -93,6 +94,7 @@ stages:
           - checkout: self
           # 1. Install terraform
           - template: templates/terraform-setup/template.yaml@terraform
+          - template: templates/terraform-summarize/template.yaml@terraform
           # 2. Run terraform plan core
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
@@ -115,6 +117,7 @@ stages:
           - checkout: self
           # 1. Install terraform
           - template: templates/terraform-setup/template.yaml@terraform
+          - template: templates/terraform-summarize/template.yaml@terraform
           # 2. Run terraform plan core
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
