--- a/.devops/aca-deploy-pipelines.yml
+++ b/.devops/aca-deploy-pipelines.yml
@@ -28,8 +28,8 @@ parameters:
 variables:
   TIME_OUT: 10
   # working dir
-  WORKING_DIR_APP: 'src/domain/aca-app'
-  WORKING_DIR_COMMON: 'src/domain/aca-common'
+  WORKING_DIR_APP: 'src/domains/aca-app'
+  WORKING_DIR_COMMON: 'src/domains/aca-common'
   DOMAIN_NAME: aca
   poolNameDev: '$(TF_POOL_NAME_DEV)'
   poolNameUat: '$(TF_POOL_NAME_UAT)'
