--- a/.devops/afm-code-review-pipelines.yml
+++ b/.devops/afm-code-review-pipelines.yml
@@ -37,8 +37,8 @@ parameters:
 variables:
   TIME_OUT: 15
   # working dir
-  WORKING_DIR_APP: 'src/domain/afm-app'
-  WORKING_DIR_COMMON: 'src/domain/afm-common'
+  WORKING_DIR_APP: 'src/domains/afm-app'
+  WORKING_DIR_COMMON: 'src/domains/afm-common'
   poolNameDev: '$(TF_POOL_NAME_DEV)'
   poolNameUat: '$(TF_POOL_NAME_UAT)'
   poolNameProd: '$(TF_POOL_NAME_PROD)'
