--- a/.devops/bizevents-deploy-pipelines.yml
+++ b/.devops/bizevents-deploy-pipelines.yml
@@ -28,8 +28,8 @@ parameters:
 variables:
   TIME_OUT: 10
   # working dir
-  WORKING_DIR_APP: 'src/domain/afm-app'
-  WORKING_DIR_COMMON: 'src/domain/afm-common'
+  WORKING_DIR_APP: 'src/domains/afm-app'
+  WORKING_DIR_COMMON: 'src/domains/afm-common'
   DOMAIN_NAME: afm
   poolNameDev: '$(TF_POOL_NAME_DEV)'
   poolNameUat: '$(TF_POOL_NAME_UAT)'
