--- a/.devops/nodo-code-review-pipelines.yml
+++ b/.devops/nodo-code-review-pipelines.yml
@@ -38,9 +38,9 @@ parameters:
 variables:
   TIME_OUT: 15
   # working dir
-  WORKING_DIR_APP: 'src/domain/nodo-app'
-  WORKING_DIR_COMMON: 'src/domain/nodo-common'
-  WORKING_DIR_SECRET: 'src/domain/nodo-secret'
+  WORKING_DIR_APP: 'src/domains/nodo-app'
+  WORKING_DIR_COMMON: 'src/domains/nodo-common'
+  WORKING_DIR_SECRET: 'src/domains/nodo-secret'
   poolNameDev: '$(TF_POOL_NAME_DEV)'
   poolNameUat: '$(TF_POOL_NAME_UAT)'
   poolNameProd: '$(TF_POOL_NAME_PROD)'
