--- a/.devops/selfcare-deploy-pipelines.yml
+++ b/.devops/selfcare-deploy-pipelines.yml
@@ -28,8 +28,8 @@ parameters:
 variables:
   TIME_OUT: 10
   # working dir
-  WORKING_DIR_APP: 'src/domain/selfcare-app'
-  WORKING_DIR_COMMON: 'src/domain/selfcare-common'
+  WORKING_DIR_APP: 'src/domains/selfcare-app'
+  WORKING_DIR_COMMON: 'src/domains/selfcare-common'
   DOMAIN_NAME: selfcare
   poolNameDev: '$(TF_POOL_NAME_DEV)'
   poolNameUat: '$(TF_POOL_NAME_UAT)'
