--- a/.devops/shared-deploy-pipelines.yml
+++ b/.devops/shared-deploy-pipelines.yml
@@ -28,8 +28,8 @@ parameters:
 variables:
   TIME_OUT: 10
   # working dir
-  WORKING_DIR_APP: 'src/domain/shared-app'
-  WORKING_DIR_COMMON: 'src/domain/shared-common'
+  WORKING_DIR_APP: 'src/domains/shared-app'
+  WORKING_DIR_COMMON: 'src/domains/shared-common'
   DOMAIN_NAME: shared
   poolNameDev: '$(TF_POOL_NAME_DEV)'
   poolNameUat: '$(TF_POOL_NAME_UAT)'
